--- a/package.json
+++ b/package.json
@@ -1,19 +1,21 @@
 {
   "name": "interstellar_movie_page",
   "version": "1.0.0",
-  "description": "",
   "main": "index.js",
   "scripts": {
+    "dev": "gulp watch",
     "build": "gulp",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "gulp": "^5.0.0",
+    "gulp": "^4.0.2",
+    "gulp-imagemin": "^7.1.0",
     "gulp-sass": "^5.1.0",
     "gulp-watch": "^5.0.1",
     "sass": "^1.75.0",
     "watch": "^1.0.2"
-  }
+  },
+  "description": ""
 }
