--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "gulp": "^4.0.2",
     "gulp-imagemin": "^7.1.0",
     "gulp-sass": "^5.1.0",
+    "gulp-uglify": "^3.0.2",
     "gulp-watch": "^5.0.1",
     "sass": "^1.75.0",
     "watch": "^1.0.2"
